# Wine-site

./: .env  .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  template.html
.upm/: store.json
